--- a/clothing-store/src/styles/navigation.css
+++ b/clothing-store/src/styles/navigation.css
@@ -35,7 +35,7 @@
 }
 
 .nav-links a:hover {
-  color: #007bff;
+  color: #7d5656;
 }
 .nav-links {
   display: flex;
@@ -57,4 +57,39 @@
   width: 4rem;
   height: 4rem;
   z-index: 100;
+}
+.nav-links a {
+  position: relative;
+  margin: 0 10px;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  margin-right: 3rem;
+  overflow: hidden;
+}
+
+.nav-links a::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background: #7d5656;
+  transform: translateX(-50%) scaleX(0);
+
+  transition: transform 0.3s ease;
+}
+
+.nav-links a:hover::after {
+  transform: translateX(-50%) scaleX(1);
+}
+
+@keyframes flip {
+  from {
+    transform: perspective(400px) rotateY(0deg);
+  }
+  to {
+    transform: perspective(400px) rotateY(180deg);
+  }
 }
