--- a/clothing-store/src/styles/base.css
+++ b/clothing-store/src/styles/base.css
@@ -26,8 +26,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
+  box-sizing: border-box;
+  background-color: #dcdcdc;
 }
 
 h1 {
