--- a/clothing-store/src/styles/home.css
+++ b/clothing-store/src/styles/home.css
@@ -1,3 +1,6 @@
+.home {
+  margin-top: 6rem;
+}
 .homeItem {
   display: flex;
   flex-direction: row;
@@ -5,4 +8,108 @@
 .clothesImages {
   width: 10rem;
   height: 10rem;
+}
+.homeSquares {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.categoryCard {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 30%;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.categoryImage {
+  width: 100%;
+  height: 30rem;
+  object-fit: cover;
+}
+
+.categoryButton {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  z-index: 2;
+}
+
+.categoryButton:hover {
+  background-color: #333;
+}
+.newArrivalsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.newArrivals {
+  flex: 1;
+  margin-right: 120px;
+}
+
+.newArrivalsText {
+  font-family: Montserrat, sans-serif;
+  font-size: 2rem;
+  margin: 0;
+}
+
+.newArrivalsTextViewAll {
+  color: rgb(39, 39, 39);
+  text-decoration: underline;
+  font-weight: 300;
+}
+
+.newArrivalsTextViewAll:hover {
+  color: rgb(39, 39, 39, 0.4);
+}
+
+.newArrivalsSlider {
+  flex: 2;
+  margin-top: 20px;
+  max-height: 55rem;
+  max-width: 55rem;
+}
+
+.newArrivalItem {
+  text-align: start;
+  padding: 10px;
+  width: auto;
+  height: auto;
+}
+
+.newArrivalImage {
+  width: 80%;
+  height: 30rem;
+  object-fit: cover;
+}
+
+.newArrivalDetails {
+  margin-top: 10px;
+}
+
+.newArrivalDetails h3 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.newArrivalDetails p {
+  margin: 5px 0;
 }
