--- a/clothing-store/src/styles/home.css
+++ b/clothing-store/src/styles/home.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
   margin-top: 6rem;
 }
 .homeItem {
@@ -115,4 +115,25 @@
 
 .newArrivalDetails p {
   margin: 5px 0;
+} */
+/* Website Content */
+.website-content {
+  opacity: 0;
+  visibility: hidden;
+  transform: scaleY(0);
+  transform-origin: center;
+  transition: transform 1s ease, opacity 1s ease, visibility 1s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  color: white;
+  background-color: #333;
+}
+
+.website-content.visible {
+  opacity: 1;
+  visibility: visible;
+  transform: scaleY(1);
 }
