changes to menu

--- a/clothing-store/src/styles/navigation.css
+++ b/clothing-store/src/styles/navigation.css
@@ -14,9 +14,6 @@
   justify-content: end;
   align-items: center;
   padding: 10px;
-
-  border-bottom: 1px solid #ddd;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .category-slider {
@@ -27,7 +24,7 @@
 .nav-links a {
   margin: 0 10px;
   text-decoration: none;
-  color: white;
+  color: blue;
   font-weight: 500;
   margin-right: 3rem;
 }
@@ -38,7 +35,7 @@
 .nav-links {
   display: flex;
   flex-direction: row;
-  color: white;
+  color: blue;
 }
 .dropdown-content {
   display: flex;
@@ -60,7 +57,7 @@
   position: relative;
   margin: 0 10px;
   text-decoration: none;
-  color: white;
+  color: blue;
   font-weight: 500;
   margin-right: 3rem;
   overflow: hidden;
@@ -111,23 +108,16 @@
   background: none;
   border: none;
   cursor: pointer;
-  display: none; /* Hidden on desktop */
+  display: none;
 }
 
-.hamburger-menu svg {
-  width: 30px;
-  height: 30px;
-  color: white;
+.hamburger-menu:focus {
+  outline: none;
 }
 
 .nav-links {
   display: flex;
   gap: 15px;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #333;
 }
 
 .category-dropdown {
@@ -146,19 +136,38 @@
 .category-dropdown:hover .dropdown-content {
   display: block;
 }
+.hamburger-menu {
+  display: block;
+  color: white;
+  background-color: transparent;
+}
 
+.nav-links {
+  display: none; /* Hidden by default */
+  flex-direction: column;
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+.nav-links.open {
+  margin-top: 0.3rem;
+  display: flex;
+}
 /* Mobile-specific styles */
 @media (max-width: 768px) {
   .hamburger-menu {
     display: block;
     color: white;
-  }
-  .hamburger-menu svg {
-    color: white;
+    background-color: transparent;
   }
 
   .nav-links {
-    display: none; /* Hidden by default */
+    display: none;
     flex-direction: column;
     position: absolute;
     top: 60px;
