--- a/clothing-store/src/styles/base.scss
+++ b/clothing-store/src/styles/base.scss
@@ -19,7 +19,6 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-
 a:hover {
   color: #535bf2;
 }
@@ -51,11 +50,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-
 button:hover {
   border-color: #646cff;
 }
-
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -72,4 +69,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}/*# sourceMappingURL=base.css.map */
+}
