--- a/clothing-store/src/styles/home.scss
+++ b/clothing-store/src/styles/home.scss
@@ -29,8 +29,6 @@
   max-width: 500px;
   margin: 0 auto;
 }
-.myImage {
-}
 .website-content {
   opacity: 0;
   visibility: hidden;
@@ -43,7 +41,7 @@
   height: 100vh;
   width: 100vw;
   color: white;
-  background: radial-gradient(circle, #0d0d0d 0%, #000000 100%);
+  background: white;
 }
 
 .website-content.visible {
