--- a/clothing-store/src/styles/app.css
+++ b/clothing-store/src/styles/app.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+body {
+  background-color: black;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -41,4 +45,31 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.website {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.background-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #f0f0f0;
+  transform: scaleY(0);
+  transform-origin: center;
+  z-index: -1;
+  transition: transform 1s ease-out;
+}
+
+.background-overlay.visible {
+  transform: scaleY(1);
 }/*# sourceMappingURL=app.css.map */
