--- a/clothing-store/src/styles/loader.css
+++ b/clothing-store/src/styles/loader.css
@@ -56,4 +56,19 @@
     opacity: 1;
     color: #fff;
   }
+}
+@media (max-width: 780px) {
+  .loader-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    z-index: 9999;
+    overflow: hidden;
+  }
 }/*# sourceMappingURL=loader.css.map */
