--- a/clothing-store/src/styles/navigation.css
+++ b/clothing-store/src/styles/navigation.css
@@ -24,17 +24,17 @@
 
 .hamburger-menu {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: -40px;
+  right: 40px;
 }
 
 .nav-links {
   display: none;
   flex-direction: column;
   position: absolute;
-  top: 60px;
+  top: 100px;
   right: 20px;
-  background-color: blueviolet;
+  background-color: rgb(0, 0, 0);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 10px 20px;
   border-radius: 5px;
@@ -43,6 +43,10 @@
 .open {
   display: flex;
   flex-direction: column;
+}
+
+.nav-links a {
+  color: white;
 }
 
 .box-container {
@@ -78,112 +82,331 @@
     width: 15rem;
   }
 }
-#hamburger {
+.hamburger {
   position: absolute;
   top: 20px;
-  right: 20px;
-  transform: translate(-50%, -50%);
-}
-#hamburger > * {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 12px;
-  height: 12px;
-  border-radius: calc(12px / 2);
-  border: 1px solid black;
-  background-color: black;
-  animation: anim 1000ms cubic-bezier(0.9, 0, 0.1, 1);
-}
-#hamburger .topleft {
-  left: calc(50% - 12px);
-  top: calc(50% - 12px);
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-#hamburger .topright {
-  left: calc(50% + 12px);
-  top: calc(50% - 12px);
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-#hamburger .bottomright {
-  left: calc(50% + 12px);
-  top: calc(50% + 12px);
-  transform: translate(-50%, -50%) rotate(-45deg);
-}
-#hamburger .bottomleft {
-  left: calc(50% - 12px);
-  top: calc(50% + 12px);
-  transform: translate(-50%, -50%) rotate(-45deg);
-}
-@keyframes anim {
-  25% {
-    top: 50%;
-    left: 50%;
-    bottom: auto;
-    right: auto;
-    height: 12px;
-    width: 10px;
-  }
-  50% {
-    top: 50%;
-    left: 50%;
-    bottom: auto;
-    right: auto;
-    height: 48px;
-    width: 6px;
-  }
-}
-#hamburger.hamburgerAnimation .topleft {
-  animation: topleftAnim 1s cubic-bezier(0.9, 0, 0.1, 1) normal;
-}
-#hamburger.hamburgerAnimation .topright {
-  animation: toprightAnim 1s cubic-bezier(0.9, 0, 0.1, 1) normal;
-}
-#hamburger.hamburgerAnimation .bottomright {
-  animation: bottomrightAnim 1s cubic-bezier(0.9, 0, 0.1, 1) normal;
-}
-#hamburger.hamburgerAnimation .bottomleft {
-  animation: bottomleftAnim 1s cubic-bezier(0.9, 0, 0.1, 1) normal;
-}
-@keyframes topleftAnim {
-  0% {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-}
-@keyframes toprightAnim {
-  0% {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-}
-@keyframes bottomrightAnim {
-  0% {
-    transform: translate(-50%, -50%) rotate(-45deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-}
-@keyframes bottomleftAnim {
-  0% {
-    transform: translate(-50%, -50%) rotate(-45deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
+  left: 20px;
 }
 
-.hambButton {
-  cursor: pointer;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+.hamburglar {
   position: absolute;
   top: 20px;
-  right: 20px;
-  width: 2.5rem;
-  height: 2.5rem;
+  left: 20px;
+  transform: scale(1);
+  margin: 40px auto;
+  position: relative;
+  display: block;
+  width: 68px;
+  height: 68px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
+.path-burger {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 68px;
+  width: 68px;
+  -webkit-mask: url(#mask);
+          mask: url(#mask);
+  -webkit-mask-box-image: url(https://raygun.io/upload/mask.svg);
+}
+
+.animate-path {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 68px;
+  height: 68px;
+}
+
+.path-rotation {
+  height: 34px;
+  width: 34px;
+  margin: 34px 34px 0 0;
+  transform: rotate(0deg);
+  transform-origin: 100% 0;
+}
+.path-rotation:before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 34px;
+  margin: 0 4px 0 0;
+  background: black;
+}
+
+@keyframes rotate-out {
+  0% {
+    transform: rotate(0deg);
+  }
+  40% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate-in {
+  0% {
+    transform: rotate(360deg);
+  }
+  40% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+.hamburglar.is-open .path {
+  animation: dash-in 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+.hamburglar.is-open .animate-path {
+  animation: rotate-in 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+
+.hamburglar.is-closed .path {
+  animation: dash-out 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+.hamburglar.is-closed .animate-path {
+  animation: rotate-out 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+
+.path {
+  stroke-dasharray: 240;
+  stroke-dashoffset: 240;
+  stroke-linejoin: round;
+}
+
+@keyframes dash-in {
+  0% {
+    stroke-dashoffset: 240;
+  }
+  40% {
+    stroke-dashoffset: 240;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes dash-out {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  40% {
+    stroke-dashoffset: 240;
+  }
+  100% {
+    stroke-dashoffset: 240;
+  }
+}
+.burger-icon {
+  position: absolute;
+  padding: 20px 16px;
+  height: 68px;
+  width: 68px;
+}
+
+.burger-container {
+  position: relative;
+  height: 28px;
+  width: 36px;
+}
+
+.burger-bun-top,
+.burger-bun-bot,
+.burger-filling {
+  position: absolute;
+  display: block;
+  height: 4px;
+  width: 36px;
+  border-radius: 2px;
+  background: black;
+}
+
+.burger-bun-top {
+  top: 0;
+  transform-origin: 34px 2px;
+}
+
+.burger-bun-bot {
+  bottom: 0;
+  transform-origin: 34px 2px;
+}
+
+.burger-filling {
+  top: 12px;
+}
+
+.burger-ring {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 68px;
+  height: 68px;
+}
+
+.svg-ring {
+  width: 68px;
+  height: 68px;
+}
+
+.hamburglar.is-open .burger-bun-top {
+  animation: bun-top-out 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+.hamburglar.is-open .burger-bun-bot {
+  animation: bun-bot-out 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+
+.hamburglar.is-closed .burger-bun-top {
+  animation: bun-top-in 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+.hamburglar.is-closed .burger-bun-bot {
+  animation: bun-bot-in 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+
+@keyframes bun-top-out {
+  0% {
+    left: 0;
+    top: 0;
+    transform: rotate(0deg);
+  }
+  20% {
+    left: 0;
+    top: 0;
+    transform: rotate(15deg);
+  }
+  80% {
+    left: -5px;
+    top: 0;
+    transform: rotate(-60deg);
+  }
+  100% {
+    left: -5px;
+    top: 1px;
+    transform: rotate(-45deg);
+  }
+}
+@keyframes bun-bot-out {
+  0% {
+    left: 0;
+    transform: rotate(0deg);
+  }
+  20% {
+    left: 0;
+    transform: rotate(-15deg);
+  }
+  80% {
+    left: -5px;
+    transform: rotate(60deg);
+  }
+  100% {
+    left: -5px;
+    transform: rotate(45deg);
+  }
+}
+@keyframes bun-top-in {
+  0% {
+    left: -5px;
+    bot: 0;
+    transform: rotate(-45deg);
+  }
+  20% {
+    left: -5px;
+    bot: 0;
+    transform: rotate(-60deg);
+  }
+  80% {
+    left: 0;
+    bot: 0;
+    transform: rotate(15deg);
+  }
+  100% {
+    left: 0;
+    bot: 1px;
+    transform: rotate(0deg);
+  }
+}
+@keyframes bun-bot-in {
+  0% {
+    left: -5px;
+    transform: rotate(45deg);
+  }
+  20% {
+    left: -5px;
+    bot: 0;
+    transform: rotate(60deg);
+  }
+  80% {
+    left: 0;
+    bot: 0;
+    transform: rotate(-15deg);
+  }
+  100% {
+    left: 0;
+    transform: rotate(0deg);
+  }
+}
+.hamburglar.is-open .burger-filling {
+  animation: burger-fill-out 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+
+.hamburglar.is-closed .burger-filling {
+  animation: burger-fill-in 0.6s linear normal;
+  animation-fill-mode: forwards;
+}
+
+@keyframes burger-fill-in {
+  0% {
+    width: 0;
+    left: 36px;
+  }
+  40% {
+    width: 0;
+    left: 40px;
+  }
+  80% {
+    width: 36px;
+    left: -6px;
+  }
+  100% {
+    width: 36px;
+    left: 0px;
+  }
+}
+@keyframes burger-fill-out {
+  0% {
+    width: 36px;
+    left: 0px;
+  }
+  20% {
+    width: 42px;
+    left: -6px;
+  }
+  40% {
+    width: 0;
+    left: 40px;
+  }
+  100% {
+    width: 0;
+    left: 36px;
+  }
 }/*# sourceMappingURL=navigation.css.map */
