--- a/clothing-store/src/styles/navigation.scss
+++ b/clothing-store/src/styles/navigation.scss
@@ -9,12 +9,28 @@
   display: flex;
   flex-direction: row;
   background-color: transparent;
-  z-index: 1000;
-  display: flex;
+  z-index: 70;
   justify-content: center;
   align-items: center;
   padding: 10px;
   gap: 1rem;
+  position: relative;
+}
+
+.firstBar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  display: flex;
+  gap: 2rem;
+  z-index: 999;
+}
+
+.firstBar h3 {
+  margin: 0;
+  font-size: 1rem;
+  color: white;
 }
 .nav-container {
   display: flex;
@@ -73,6 +89,12 @@
   position: absolute;
   top: 80px;
 }
+.logo-part .fancy {
+  font-family: "Coustard", serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 30px;
+}
 @media (max-width: 780px) {
   .pointed-box {
     width: 15rem;
@@ -81,14 +103,12 @@
 
 // hamburger
 .hamburger {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+  flex: 1;
 }
 // vars
-$color: black; // icon color
-$animation: 0.6s; // animation speed
-$scale: 1; // icon scale 68/68 default
+$color: black;
+$animation: 0.6s;
+$scale: 1;
 
 *,
 *:before,
@@ -99,9 +119,7 @@ $scale: 1; // icon scale 68/68 default
 // spacing + background-color
 
 .hamburglar {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+  flex: 1;
   transform: scale($scale);
   margin: 40px auto;
   position: relative;
